--- a/index.html
+++ b/index.html
@@ -151,6 +151,26 @@
 "Viljandi maakond",
 "Võru maakond"
 ],
+"Eesti filmid/telesarjad":
+[
+"Kevade",
+"Viimne reliikvia",
+"Kättemaksukontor",
+"Õnne 13",
+"Jan Uuspõld läheb Tartusse",
+"Nukitsamees",
+"Tõde ja Õigus",
+"Tulnukas",
+"Kelgukoerad",
+"Pilvede all",
+"Ühikarotid",
+"ENSV",
+"Heeringas Veenuse Õlal",
+"Pehmed ja karvased",
+"Tujurikkuja",
+"Mõmmi ja aabits",
+"Buratino tegutseb jälle"
+]
         };
 
         const startEl = document.getElementById("start");
